# epd-waveshare

./: Cargo.toml
examples/epd2in13_full/: Cargo.toml
examples/epd2in13_full/src/: main.rs
ref/: epd2in13.py  epdconfig.py  main.py
src/: lib.rs
src/epd2in13/: graphics.rs  mod.rs
src/type_a/: constants.rs
