[package]
name = "embedded_linux_eink_example"
version = "0.1.0"
authors = ["Christoph Groß <christoph-gross@mailbox.org>"]
edition = "2018"

[dependencies]

epd-waveshare = { path = "../../" }

linux-embedded-hal = "0.2.2"
embedded-graphics = "0.4.5"
embedded-hal = { version = "0.2.2", features = ["unproven"] }
